--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>コーヒーサークル</title>
+    <title>TOKYO TECHSPRESSO</title>
 </head>
 <body>
-    <h1>ようこそ！コーヒーサークルのウェブサイトへ</h1>
+    <h1>ようこそ！TOKYO TECHSPRESSOのWebsiteへ!</h1>
     <p>ここでは、私たちの活動やイベント情報をお届けします。</p>
-    <p>お問い合わせ: coffee@example.com</p>
+    <p>お問い合わせ: tokyotechspresso@gmail.com</p>
 </body>
 </html>
