--- a/index.html
+++ b/index.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TOKYO TECHSPRESSO</title>
+    <title>TECHSPRESSO Coffee Club</title>
+    <link rel="stylesheet" href="style.css"> <!-- CSSを読み込み -->
 </head>
 <body>
-    <h1>ようこそ！TOKYO TECHSPRESSOのWebsiteへ!</h1>
-    <p>ここでは、私たちの活動やイベント情報をお届けします。</p>
-    <p>お問い合わせ: tokyotechspresso@gmail.com</p>
+    <header class="hero"> <!-- ヘッダー部分 -->
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#events">Events</a></li>
+                <li><a href="#join">Join Us</a></li>
+            </ul>
+        </nav>
+        <div class="hero-text">
+            <h1>Welcome to TECHSPRESSO Coffee Club</h1>
+            <p>Discover, Share, and Enjoy Coffee</p>
+        </div>
+    </header>
+    <section id="about"> <!-- Aboutセクション -->
+        <h2>About Us</h2>
+        <p>
+            TECHSPRESSO Coffee Clubは、コーヒーを愛する仲間たちが集うコミュニティです。
+            コーヒーの知識を深めたり、新しい味を発見したりする楽しさを共有しています。
+        </p>
+        <img src="images/about.jpg" alt="About Us" style="max-width: 100%; height: auto;">
+    </section>
+    <section id="events"> <!-- Eventsセクション -->
+        <h2>Our Events</h2>
+        <p>これまでのイベントや今後のスケジュールをご紹介します。</p>
+        <ul>
+            <li>コーヒーテイスティングワークショップ - 毎月開催</li>
+            <li>特別ゲストによるコーヒー講座 - 2月10日</li>
+            <li>文化祭出店 - 4月予定</li>
+        </ul>
+    </section>
+    <section id="join"> <!-- Join Usセクション -->
+        <h2>Join Us</h2>
+        <p>We are always looking for new members! Contact us to join the fun.</p>
+    </section>
+    <footer> <!-- フッター -->
+        <p>&copy; 2025 TECHSPRESSO Coffee Club</p>
+    </footer>
 </body>
 </html>
