--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TECHSPRESSO Coffee Club</title>
+    <title>TECHSPRESSO COFFEE STAND</title>
     <link rel="stylesheet" href="style.css"> <!-- CSSを読み込み -->
 </head>
 <body>
@@ -16,14 +16,14 @@
             </ul>
         </nav>
         <div class="hero-text">
-            <h1>Welcome to TECHSPRESSO Coffee Club</h1>
+            <h1>Welcome to TECHSPRESSO COFFEE STAND</h1>
             <p>Discover, Share, and Enjoy Coffee</p>
         </div>
     </header>
     <section id="about"> <!-- Aboutセクション -->
         <h2>About Us</h2>
         <p>
-            TECHSPRESSO Coffee Clubは、コーヒーを愛する仲間たちが集うコミュニティです。
+            TECHSPRESSO COFFEE STANDは、コーヒーを愛する仲間たちが集うコミュニティです。
             コーヒーの知識を深めたり、新しい味を発見したりする楽しさを共有しています。
         </p>
         <img src="images/about.jpg" alt="About Us" style="max-width: 100%; height: auto;">
@@ -42,7 +42,7 @@
         <p>We are always looking for new members! Contact us to join the fun.</p>
     </section>
     <footer> <!-- フッター -->
-        <p>&copy; 2025 TECHSPRESSO Coffee Club</p>
+        <p>&copy; 2024 TECHSPRESSO Coffee Club</p>
     </footer>
 </body>
 </html>
