--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             TECHSPRESSO COFFEE STANDは、コーヒーを愛する仲間たちが集うコミュニティです。
             コーヒーの知識を深めたり、新しい味を発見したりする楽しさを共有しています。
         </p>
-        <img src="images/about.jpg" alt="About Us" style="max-width: 100%; height: auto;">
+        <img src="techs pic/texp2.jpg" alt="About Us" style="max-width: 100%; height: auto;">
     </section>
     <section id="events"> <!-- Eventsセクション -->
         <h2>Our Events</h2>
