--- a/index.html
+++ b/index.html
@@ -26,28 +26,26 @@
             <p>Discover, Share, and Enjoy Coffee</p>
         </div>
     </header>
+
     <section id="about"> <!-- Aboutセクション -->
-        <h2>About Us</h2>
-        <p>
-            TECHSPRESSO COFFEE STANDは、コーヒーを愛する仲間たちが集うコミュニティです。
-            コーヒーの知識を深めたり、新しい味を発見したりする楽しさを共有しています。
-        </p>
-        <img src="techs pic/texp2.jpg" alt="About Us" style="max-width: 100%; height: auto;">
+        <div class="about-container">
+            <img src="images/about.jpg" alt="About Us">
+            <div class="about-text">
+                <h2>About Us</h2>
+                <p>
+                    TECHSPRESSO COFFEE STANDは、コーヒーを愛する仲間たちが集うコミュニティです。
+                    コーヒーの知識を深めたり、新しい味を発見したりする楽しさを共有しています。
+                </p>
+            </div>
+        </div>
     </section>
-    <section id="events"> <!-- Eventsセクション -->
-        <h2>Our Events</h2>
-        <p>これまでのイベントや今後のスケジュールをご紹介します。</p>
-        <ul>
-            <li>コーヒーテイスティングワークショップ - 毎月開催</li>
-            <li>特別ゲストによるコーヒー講座 - 2月10日</li>
-            <li>文化祭出店 - 4月予定</li>
-        </ul>
-    </section>
+
     <section id="join"> <!-- Join Usセクション -->
         <h2>Join Us</h2>
         <p>We are always looking for new members! Contact us to join the fun.</p>
         <button onclick="window.location.href='mailto:contact@techspressocoffeestand.com';">Contact Us</button>
     </section>
+
     <footer> <!-- フッター -->
         <p>&copy; 2024 TECHSPRESSO COFFEE STAND</p>
     </footer>
