--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section id="about"> <!-- Aboutセクション -->
         <div class="about-container">
-            <img src="images/about.jpg" alt="About Us">
+            <img src="techs pic/texp2.jpg" alt="About Us">
             <div class="about-text">
                 <h2>About Us</h2>
                 <p>
