--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </section>
 
     <footer> <!-- フッター -->
-        <p>&copy; 2024 TECHSPRESSO COFFEE STAND</p>
+        <p>&copy; 2024-2025 TECHSPRESSO COFFEE STAND</p>
     </footer>
 </body>
 </html>
