--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
         <div class="hero-text">
-            <h1>Welcome to TECHSPRESSO COFFEE STAND</h1>
+            <h1>TECHSPRESSO COFFEE STAND</h1>
             <p>Discover, Share, and Enjoy Coffee</p>
         </div>
     </header>
