--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
         <div class="hero-text">
             <h1>TECHSPRESSO COFFEE STAND</h1>
-            <p>Discover, Share, and Enjoy Coffee</p>
+            <p>Institute of SCIENCE TOKYO's Coffee stand</p>
         </div>
     </header>
 
