--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
             <div class="about-text">
                 <h2>About Us</h2>
                 <p>
-                    TECHSPRESSO COFFEE STANDは、コーヒーを愛する仲間たちが集うコミュニティです。
-                    コーヒーの知識を深めたり、新しい味を発見したりする楽しさを共有しています。
+                    TECHSPRESSO COFFEE STANDは、コーヒーを愛する仲間たちが集う東京科学大のコーヒーサークルです。
+                    コーヒーを通じて自らの居場所だと感じてもらえる場所を目指し、大岡山をはじめとした地域のコミュニティに根付いた多くの人々に認知してもらえるCOFFEE STANDを目指しています。
+    
                 </p>
             </div>
         </div>
