--- a/index.html
+++ b/index.html
@@ -5,38 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TECHSPRESSO COFFEE STAND</title>
     <link rel="stylesheet" href="style.css"> <!-- CSSを読み込み -->
-    <!-- メタデータ -->
-    <meta name="description" content="Discover the joy of coffee at TECHSPRESSO COFFEE STAND. Join us for events, workshops, and more!">
-    <meta name="keywords" content="Coffee, TECHSPRESSO, Coffee Stand, Workshops, Events">
-    <meta name="author" content="TECHSPRESSO Team">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="hero"> <!-- ヘッダー部分 -->
         <nav>
             <ul>
-                <li><a href="#about" aria-label="About Us section">About</a></li>
-                <li><a href="#events" aria-label="Our Events section">Events</a></li>
-                <li><a href="#join" aria-label="Join Us section">Join Us</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#events">Events</a></li>
+                <li><a href="#join">Join Us</a></li>
             </ul>
         </nav>
         <div class="hero-text">
-            <h1>TECHSPRESSO COFFEE STAND</h1>
-            <p>Institute of SCIENCE TOKYO's Coffee stand</p>
+            <h1>Welcome to TECHSPRESSO COFFEE STAND</h1>
+            <p>Discover, Share, and Enjoy Coffee</p>
         </div>
     </header>
 
     <section id="about"> <!-- Aboutセクション -->
         <div class="about-container">
-            <img src="techs pic/texp2.jpg" alt="About Us">
+            <img src="images/about.jpg" alt="About Us">
             <div class="about-text">
                 <h2>About Us</h2>
                 <p>
-                    TECHSPRESSO COFFEE STANDは、コーヒーを愛する仲間たちが集う東京科学大のコーヒーサークルです。
-                    コーヒーを通じて自らの居場所だと感じてもらえる場所を目指し、大岡山をはじめとした地域のコミュニティに根付いた多くの人々に認知してもらえるCOFFEE STANDを目指しています。
-    
+                    TECHSPRESSO COFFEE STANDは、コーヒーを愛する仲間たちが集うコミュニティです。
+                    コーヒーの知識を深めたり、新しい味を発見したりする楽しさを共有しています。
                 </p>
+            </div>
+        </div>
+    </section>
+
+    <section id="events" class="event-section"> <!-- Eventsセクション -->
+        <div class="event-background">
+            <div class="event-content">
+                <h2>Our Activities</h2>
+                <ul>
+                    <li><strong>学内活動:</strong> ワークショップやカフェスタイルのディスカッション。</li>
+                    <li><strong>学外活動:</strong> コーヒー農園ツアーや地域カフェの訪問。</li>
+                    <li><strong>文化祭:</strong> TECHSPRESSOブースを通じたコーヒー体験。</li>
+                </ul>
             </div>
         </div>
     </section>
@@ -48,7 +54,7 @@
     </section>
 
     <footer> <!-- フッター -->
-        <p>&copy; 2024-2025 TECHSPRESSO COFFEE STAND</p>
+        <p>&copy; 2024 TECHSPRESSO COFFEE STAND</p>
     </footer>
 </body>
 </html>
