--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav>
         <div class="hero-text">
             <h1>Welcome to TECHSPRESSO COFFEE STAND</h1>
-            <p>Discover, Share, and Enjoy Coffee</p>
+            <p>Institute of Science Tokyo's coffee stand</p>
         </div>
     </header>
 
