--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </ul>
         </nav>
         <div class="hero-text">
-            <h1>Welcome to TECHSPRESSO COFFEE STAND</h1>
+            <h1>TECHSPRESSO COFFEE STAND</h1>
             <p>Institute of Science Tokyo's coffee stand</p>
         </div>
     </header>
