--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <section id="events" class="event-section"> <!-- Eventsセクション -->
         <div class="event-background">
             <div class="event-content">
-                <h2>Our Activities</h2>
+                <h2>Events</h2>
                 <ul>
-                    <li><strong>学内活動:</strong> ワークショップやカフェスタイルのディスカッション。</li>
-                    <li><strong>学外活動:</strong> コーヒー農園ツアーや地域カフェの訪問。</li>
-                    <li><strong>文化祭:</strong> TECHSPRESSOブースを通じたコーヒー体験。</li>
+                    <li><strong>学内活動:</strong> コーヒーの知識のインプット始まり、ドリップの持つパラメーター操作実験や、比較テイスティングなどコーヒーへの研究を行っています。</li>
+                    <li><strong>学外活動:</strong> 地域コミュニティの出店や、近隣カフェとの交流を行っています。</li>
+                    <li><strong>文化祭:</strong> サークルメンバー全員が協力し、部門ごとにCOFFEE STANDを作り上げます。サークルブランディングや店舗設計、レシピ開発など叡智を結集させ出店に臨みます。</li>
                 </ul>
             </div>
         </div>
