--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section id="join"> <!-- Join Usセクション -->
         <h2>Join Us</h2>
         <p>We are always looking for new members! Contact us to join the fun.</p>
-        <button onclick="window.location.href='mailto:contact@techspressocoffeestand.com';">Contact Us</button>
+        <button onclick="window.location.href='mailto:techspresso@gmail.com';">Contact Us</button>
     </section>
 
     <footer> <!-- フッター -->
