--- a/index.html
+++ b/index.html
@@ -56,5 +56,9 @@
     <footer> <!-- フッター -->
         <p>&copy; 2024 TECHSPRESSO COFFEE STAND</p>
     </footer>
+<a href="https://www.instagram.com/techspresso_coffee/" target="_blank" class="instagram-link" aria-label="Visit our Instagram">
+    <img src="techs pic/instagram-icon.png" alt="Instagram Icon">
+</a>
+
 </body>
 </html>
