--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p>&copy; 2024 TECHSPRESSO COFFEE STAND</p>
     </footer>
 <a href="https://www.instagram.com/techspresso_coffee/" target="_blank" class="instagram-link" aria-label="Visit our Instagram">
-    <img src="techs pic/Instagram_Glyph_Gradient.png" alt="Instagram Icon">
+    <img src="techs pic/Instagram_Glyph_Gradient.jpg.png" alt="Instagram Icon">
 </a>
 
 </body>
