--- a/index.html
+++ b/index.html
@@ -7,19 +7,15 @@
     <link rel="stylesheet" href="style.css"> <!-- CSSを読み込み -->
 </head>
 <body>
-    <header class="hero"> <!-- ヘッダー部分 -->
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#events">Events</a></li>
-                <li><a href="#join">Join Us</a></li>
-            </ul>
-        </nav>
-        <div class="hero-text">
-            <h1>TECHSPRESSO COFFEE STAND</h1>
-            <p>Institute of Science Tokyo's coffee stand</p>
+  <header class="hero">
+    <div class="hero-content">
+        <h1>Welcome to TECHSPRESSO COFFEE STAND</h1>
+        <p>Institute of Science Tokyo's coffee stand</p>
+        <div class="hero-icon-container">
+            <img src="techs pic/our-icon.png" alt="Our Icon" class="icon">
         </div>
-    </header>
+    </div>
+</header>
 
     <section id="about"> <!-- Aboutセクション -->
         <div class="about-container">
