--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Welcome to TECHSPRESSO COFFEE STAND</h1>
         <p>Institute of Science Tokyo's coffee stand</p>
         <div class="hero-icon-container">
-            <img src="techs pic/our-icon.png" alt="Our Icon" class="icon">
+            <img src="techs pic/texp4.PNG" alt="Our Icon" class="icon">
         </div>
     </div>
 </header>
