--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
             <img src="techs pic/texp4.PNG" alt="Our Icon" class="icon">
         </div>
     </div>
+/* ナビゲーションバー */
+nav {
+    background: rgba(0, 0, 0, 0.6); /* 半透明の背景 */
+    position: sticky; /* スクロール時に上部に固定 */
+    top: 0;
+    z-index: 1000; /* ナビゲーションを最前面に表示 */
+}
+
+nav ul {
+    list-style: none; /* 項目記号を非表示 */
+    display: flex; /* 横並びに配置 */
+    justify-content: center; /* 中央揃え */
+    padding: 10px 0;
+    margin: 0;
+}
 </header>
 
     <section id="about"> <!-- Aboutセクション -->
