--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>TECHSPRESSO COFFEE STAND</title>
     <link rel="stylesheet" href="style.css"> <!-- CSSを読み込み -->
 </head>
+<nav>
+    <ul>
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#events">Events</a></li>
+        <li><a href="#join">Join Us</a></li>
+    </ul>
+</nav>
+
 <body>
   <header class="hero">
     <div class="hero-content">
