--- a/index.html
+++ b/index.html
@@ -6,27 +6,29 @@
     <title>TECHSPRESSO COFFEE STAND</title>
     <link rel="stylesheet" href="style.css"> <!-- CSSを読み込み -->
 </head>
-<nav>
-    <ul>
-        <li><a href="#hero">Home</a></li>
-        <li><a href="#events">Events</a></li>
-        <li><a href="#join">Join Us</a></li>
-    </ul>
-</nav>
-
 <body>
-  <header class="hero">
-    <div class="hero-content">
-        <h1>Welcome to TECHSPRESSO COFFEE STAND</h1>
-        <p>Institute of Science Tokyo's coffee stand</p>
-        <div class="hero-icon-container">
-            <img src="techs pic/texp4.PNG" alt="Our Icon" class="icon">
+    <!-- ナビゲーションバー -->
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#events">Events</a></li>
+            <li><a href="#join">Join Us</a></li>
+        </ul>
+    </nav>
+
+    <!-- Heroセクション -->
+    <header class="hero">
+        <div class="hero-content">
+            <h1>Welcome to TECHSPRESSO COFFEE STAND</h1>
+            <p>Institute of Science Tokyo's coffee stand</p>
+            <div class="hero-icon-container">
+                <img src="techs pic/texp4.PNG" alt="Our Icon" class="icon">
+            </div>
         </div>
-    </div>
+    </header>
 
-</header>
-
-    <section id="about"> <!-- Aboutセクション -->
+    <!-- Aboutセクション -->
+    <section id="about">
         <div class="about-container">
             <img src="techs pic/texp2.jpg" alt="About Us">
             <div class="about-text">
@@ -39,31 +41,35 @@
         </div>
     </section>
 
-    <section id="events" class="event-section"> <!-- Eventsセクション -->
+    <!-- Eventsセクション -->
+    <section id="events" class="event-section">
         <div class="event-background">
             <div class="event-content">
                 <h2>Events</h2>
                 <ul>
-                    <li><strong>学内活動:</strong> コーヒーの知識のインプット始まり、ドリップの持つパラメーター操作実験や、比較テイスティングなどコーヒーへの研究を行っています。</li>
-                    <li><strong>学外活動:</strong> 地域コミュニティの出店や、近隣カフェとの交流を行っています。</li>
-                    <li><strong>文化祭:</strong> サークルメンバー全員が協力し、部門ごとにCOFFEE STANDを作り上げます。サークルブランディングや店舗設計、レシピ開発など叡智を結集させ出店に臨みます。</li>
+                    <li><strong>学内活動:</strong> コーヒーの知識のインプット始まり...</li>
+                    <li><strong>学外活動:</strong> 地域コミュニティの出店や交流...</li>
+                    <li><strong>文化祭:</strong> サークルメンバー全員が協力...</li>
                 </ul>
             </div>
         </div>
     </section>
 
-    <section id="join"> <!-- Join Usセクション -->
+    <!-- Join Usセクション -->
+    <section id="join">
         <h2>Join Us</h2>
         <p>We are always looking for new members! Contact us to join the fun.</p>
         <button onclick="window.location.href='mailto:techspresso@gmail.com';">Contact Us</button>
     </section>
 
-    <footer> <!-- フッター -->
+    <!-- フッター -->
+    <footer>
         <p>&copy; 2024 TECHSPRESSO COFFEE STAND</p>
     </footer>
-<a href="https://www.instagram.com/techspresso_coffee/" target="_blank" class="instagram-link" aria-label="Visit our Instagram">
-    <img src="techs pic/Instagram_Glyph_Gradient.jpg.png" alt="Instagram Icon">
-</a>
 
+    <!-- Instagramリンク -->
+    <a href="https://www.instagram.com/techspresso_coffee/" target="_blank" class="instagram-link" aria-label="Visit our Instagram">
+        <img src="techs pic/Instagram_Glyph_Gradient.jpg" alt="Instagram Icon">
+    </a>
 </body>
 </html>
