--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <!-- Instagramリンク -->
     <a href="https://www.instagram.com/techspresso_coffee/" target="_blank" class="instagram-link" aria-label="Visit our Instagram">
-        <img src="techs pic/Instagram_Glyph_Gradient.jpg" alt="Instagram Icon">
+        <img src="techs pic/Instagram_Glyph_Gradient.jpg.png" alt="Instagram Icon">
     </a>
 </body>
 </html>
