--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Heroセクション -->
     <header class="hero">
         <div class="hero-content">
-            <h1>Welcome to TECHSPRESSO COFFEE STAND</h1>
+            <h1>TECHSPRESSO COFFEE STAND</h1>
             <p>Institute of Science Tokyo's coffee stand</p>
             <div class="hero-icon-container">
                 <img src="techs pic/texp4.PNG" alt="Our Icon" class="icon">
