--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <div class="event-content">
                 <h2>Events</h2>
                 <ul>
-                    <li><strong>学内活動:</strong> コーヒーの知識のインプット始まり...</li>
-                    <li><strong>学外活動:</strong> 地域コミュニティの出店や交流...</li>
-                    <li><strong>文化祭:</strong> サークルメンバー全員が協力...</li>
+                    <li><strong>学内活動:</strong> コーヒーの知識のインプット始まり、ドリップコーヒーの持つパラメーターの考察からコーヒーと相性の良いミルクまで多岐にわたるコーヒー探究活動を行っています。</li>
+                    <li><strong>学外活動:</strong> 地域コミュニティへの出店や、外部のカフェの方との交流等行っています。</li>
+                    <li><strong>文化祭:</strong> サークル内の部門ごとにそれぞれが役割を分担し、ブランディング、店舗外装からレシピ開発まで全てをかけて出店に臨みます。</li>
                 </ul>
             </div>
         </div>
