--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
     <a href="https://www.instagram.com/techspresso_coffee/" target="_blank" class="instagram-link" aria-label="Visit our Instagram">
         <img src="techs pic/Instagram_Glyph_Gradient.jpg.png" alt="Instagram Icon">
     </a>
+　　 <!-- Xリンク -->
+    <a href="https://twitter.com/techspresso_coffee" target="_blank" class="x-link" aria-label="Visit our X">
+    <img src="techs pic/logo-black.png" alt="X Icon">
+</a>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         const aboutHeading = document.querySelector(".about-text h2");
