--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </a>
 　　 <!-- Xリンク -->
     <a href="https://twitter.com/techspresso_coffee" target="_blank" class="x-link" aria-label="Visit our X">
-        <img src="techs pic/logo-black.png" alt="X Icon">
+        <img src="techs pic/logo-white.png" alt="X Icon">
     </a>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
