--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="hero">
         <div class="hero-content">
             <h1>TECHSPRESSO COFFEE STAND</h1>
-            <p>Institute of Science Tokyo's coffee stand</p>
+            <p>Institute of Science Tokyo's Coffee Stand</p>
             <div class="hero-icon-container">
                 <img src="techs pic/texp4.PNG" alt="Our Icon" class="icon">
             </div>
