--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Aboutセクション -->
     <section id="about">
         <div class="about-container">
-            <img src="techs pic/texp5.jpg" alt="About Us">
+            <img src="techs pic/texsp5.jpg" alt="About Us">
             <div class="about-text">
                 <h2>About Us</h2>
                 <p>
