--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
     </footer>
 
     <!-- Instagramリンク -->
-    <a href="https://www.instagram.com/techspresso_coffee/" target="_blank" class="instagram-link" aria-label="Visit our Instagram">
+    <a href="https://www.instagram.com/techspresso_coffee_stand/" target="_blank" class="instagram-link" aria-label="Visit our Instagram">
         <img src="techs pic/Instagram_Glyph_Gradient.jpg.png" alt="Instagram Icon">
     </a>
 　　 <!-- Xリンク -->
-    <a href="https://twitter.com/techspresso_coffee" target="_blank" class="x-link" aria-label="Visit our X">
+    <a href="https://twitter.com/techspresso_CS" target="_blank" class="x-link" aria-label="Visit our X">
         <img src="techs pic/logo-white.png" alt="X Icon">
     </a>
 <script>
