--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
             <div class="about-text">
                 <h2>About Us</h2>
                 <p>
-                    TECHSPRESSO COFFEE STANDは、コーヒーを愛する仲間たちが集うコミュニティです。
-                    コーヒーの知識を深めたり、新しい味を発見したりする楽しさを共有しています。
+                  TECHSPRESSOは、東京科学大学を拠点に活動する学生主体のコーヒーコミュニティです。コーヒーが好きな人も、これから学びたい人も歓迎し、
+                    「好き」を共有できる居場所を提供します。サークル内での知識交流はもちろん、地域のイベントや学祭への出店を通じて、コーヒー文化の魅力を広めることを目指しています。
+                    単なる趣味の場ではなく、実店舗運営やサークル内のブランド豆の開発を長期的な目標に掲げ、コーヒー業界とも積極的に関わる挑戦的な団体です。
                 </p>
             </div>
         </div>
