--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
 <!-- Join Usセクション -->
 <section id="join">
     <h2>Join Us</h2>
-    <p>We are always looking for new members! Contact us to join the fun.</p>
+    <p>TOKYO TECHSPRESSOは、コーヒーを通じて学び、挑戦し、仲間と共に成長する場です。以下のような人を求めています。
+
+コーヒーに情熱を持つ人 – すでに知識がある人や、これから深めたい人
+挑戦したい人 – 学祭や地域イベントに出店し、実践を積みながら成長したい人
+コミュニティを大切にする人 – 仲間と共に「居場所」をつくり、協力しながら活動できる人</p>
     <button onclick="window.location.href='mailto:techspresso@gmail.com';">Contact Us</button>
 </section>
 
