--- a/index.html
+++ b/index.html
@@ -56,16 +56,34 @@
         </div>
     </section>
 
+
 <!-- Join Usセクション -->
 <section id="join">
     <h2>Join Us</h2>
-    <p>TOKYO TECHSPRESSOは、コーヒーを通じて学び、挑戦し、仲間と共に成長する場です。以下のような人を求めています。
+    
+    <p>
+        TOKYO TECHSPRESSOは、コーヒーを通じて学び、挑戦し、仲間と共に成長する場です。  
+        私たちは、以下のような人を求めています。
+    </p>
 
-コーヒーに情熱を持つ人 – すでに知識がある人や、これから深めたい人
-挑戦したい人 – 学祭や地域イベントに出店し、実践を積みながら成長したい人
-コミュニティを大切にする人 – 仲間と共に「居場所」をつくり、協力しながら活動できる人</p>
+    <p>
+        <strong>☕ コーヒーに情熱を持つ人</strong>  
+        すでに知識がある人も、これから深めたい人も歓迎。コーヒーの奥深さを一緒に探求しましょう。
+    </p>
+
+    <p>
+        <strong>🚀 挑戦したい人</strong>  
+        学祭や地域イベントに出店し、実践を積みながら成長したい人。実際の運営を通じて経験を積めます。
+    </p>
+
+    <p>
+        <strong>🤝 コミュニティを大切にする人</strong>  
+        仲間と共に「居場所」をつくり、協力しながら活動できる人。人とのつながりを大切にしたい人に最適です。
+    </p>
+
     <button onclick="window.location.href='mailto:techspresso@gmail.com';">Contact Us</button>
 </section>
+
 
     <!-- フッター -->
     <footer>
