メールアドレス修正

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         仲間と共に「居場所」をつくり、協力しながら活動できる人。人とのつながりを大切にしたい人に最適です。
     </p>
 
-    <button onclick="window.location.href='mailto:techspresso@gmail.com';">Contact Us</button>
+    <button onclick="window.location.href='mailto:tokyotechspresso@gmail.com';">Contact Us</button>
 </section>
 
 
