--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
     </p>
 
     <p>
-        <strong>☕ コーヒーに情熱を持つ人</strong>  
+        <strong>コーヒーに情熱を持つ人</strong>  
         すでに知識がある人も、これから深めたい人も歓迎。コーヒーの奥深さを一緒に探求しましょう。
     </p>
 
     <p>
-        <strong>🚀 挑戦したい人</strong>  
+        <strong>挑戦したい人</strong>  
         学祭や地域イベントに出店し、実践を積みながら成長したい人。実際の運営を通じて経験を積めます。
     </p>
 
     <p>
-        <strong>🤝 コミュニティを大切にする人</strong>  
+        <strong>コミュニティを大切にする人</strong>  
         仲間と共に「居場所」をつくり、協力しながら活動できる人。人とのつながりを大切にしたい人に最適です。
     </p>
 
