--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <h2>Join Us</h2>
     
     <p>
-        TOKYO TECHSPRESSOは、コーヒーを通じて学び、挑戦し、仲間と共に成長する場です。  
+        TECHSPRESSOは、コーヒーを通じて学び、挑戦し、仲間と共に成長する場です。  
         私たちは、以下のような人を求めています。
     </p>
 
